# roberto_robot

./: .gitmodules  14.04_NewMachineSetUp.bash  Dockerfile  README.md
Documentation/: roberto_power_distribution.xml  simplified_angle_diagram.xml
UNUSED/roberto_booksensor/: CMakeLists.txt  package.xml
UNUSED/roberto_booksensor/launch/: book.launch
UNUSED/roberto_booksensor/src/: main.cpp
UNUSED/roberto_calibrate/: CMakeLists.txt
UNUSED/roberto_calibrate/include/: RTIMUMagCal.h
UNUSED/roberto_calibrate/launch/: calibrate_imu.launch
UNUSED/roberto_calibrate/src/: RTIMUAccelCal.cpp  RTMath.cpp
UNUSED/roberto_i2c/: CMakeLists.txt  package.xml
UNUSED/roberto_i2c/include/: I2CBus.h  OLED.h  RTIMU.h  RTIMULibDefs.h  RTIMUMPU9150.h  RTIMUMPU9250.h  RTIMUSettings.h  gpio.h
UNUSED/roberto_i2c/src/: I2CBus.cpp  RTIMUMPU9150.cpp  RTIMUMPU9250.cpp  RTIMUSettings.cpp  gpio.cpp  i2c_node.cpp
UNUSED/roberto_i2c/test/: button_test.py  display_publisher.py
UNUSED/roberto_linesensor/src/: linesensor_snake_v2.cpp  linesensor_snake_v3.cpp  morph.cpp  snake_follower.cpp
UNUSED/roberto_odom/: package.xml
UNUSED/roberto_odom/launch/: cam_test.launch  snake.launch
UNUSED/roberto_regbotsensor/launch/: regbot.launch
UNUSED/robot_localization_OLD/launch/: ekf.launch
roberto/charg/: Makefile
roberto/charg/Inc/: VCP.h
roberto/charg/Src/: main.cpp
src/opencv3_test/: CMakeLists.txt  package.xml
src/opencv3_test/launch/: cam_test.launch
src/opencv3_test/src/: main.cpp
src/roberto_base/: CMakeLists.txt  package.xml
src/roberto_base/launch/: base.launch
src/roberto_booksensor/src/: main.cpp
src/roberto_calibrate/: CMakeLists.txt  package.xml
src/roberto_calibrate/include/: RTIMUAccelCal.h
src/roberto_calibrate/src/: RTIMUMagCal.cpp  i2c_calib.cpp
src/roberto_description/: CMakeLists.txt  package.xml
src/roberto_description/urdf/: macros.xacro  roberto.gazebo  roberto.xacro
src/roberto_i2c/: CMakeLists.txt
src/roberto_i2c/RTIMULib/IMUDrivers/: RTIMUMPU9150.cpp  RTIMUMPU9150.h
src/roberto_i2c/TinyShield_9_Axis/: RTIMU.h  RTIMULibDefs.h  RTIMUSettings.cpp  RTIMUSettings.h  TinyShield_9_Axis.ino
src/roberto_i2c/include/: I2CBus.h  OLED.h  OLED_GFX.h  RTIMU.h  RTIMUMPU9150.h  RTIMUMPU9250.h  RTIMUSettings.h  gpio.h
src/roberto_i2c/launch/: roberto_i2c.launch
src/roberto_i2c/param/: imu.yaml
src/roberto_i2c/src/: I2CBus.cpp  OLED.cpp  OLED_GFX.cpp  RTIMU.cpp  RTIMUMPU9150.cpp  RTIMUMPU9250.cpp  RTIMUSettings.cpp  gpio.cpp  i2c_node.cpp
src/roberto_i2c/test/: button_test.py  display_publisher.py  imu_printer.py
src/roberto_linesensor/: CMakeLists.txt  package.xml
src/roberto_linesensor/launch/: cam_test.launch  snake.launch
src/roberto_linesensor/src/: linesensor_snake_v2.cpp  linesensor_snake_v3.cpp  main.cpp  morph.cpp
src/roberto_menu/: display_publisher.py  package.xml
src/roberto_menu/launch/: menu.launch
src/roberto_msgs/: CMakeLists.txt  package.xml
src/roberto_msgs/msg/: Line.msg
src/roberto_odom/: CMakeLists.txt
src/roberto_odom/src/: main.cpp
src/roberto_regbotsensor/: CMakeLists.txt  package.xml
src/roberto_regbotsensor/launch/: morph.launch  regbot.launch
src/roberto_regbotsensor/src/: regbot_sensor.cpp
src/roberto_statemachine/: CMakeLists.txt  package.xml  state_machine.py
src/roberto_statemachine/launch/: menu.launch  statemachine.launch
src/roberto_teleop/: CMakeLists.txt  package.xml
src/roberto_teleop/launch/: joy.launch
src/roberto_teleop/scripts/: roberto_teleop_key.py
src/roberto_teleop/src/: teleop_joy.cpp
src/robot_localization/launch/: ekf.launch
src/robot_localization/params/: ekf.yaml
